# Arkanoid

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  Arkanoid.mmake  Arkanoid.pro  Arkanoid.sublime-project  CMakeLists.txt  README.md
Assets/Shaders/: GatoShader.frag  PointLightA.frag  PointLightB.frag
Source/: Arkanoid.cpp  Arkanoid.h  Ball.h  Paddle.cpp  Paddle.h  audio_music_stream.cpp  main.cpp
Source/GDCore/: ActionManager.h  Entity.cpp  Entity.h  GDCore.cpp  GDCore.h  IEntity.h  InputManager.cpp  InputManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Source/GDEngine/: Entity.cpp  Entity.h  GDEngine.cpp  GDEngine.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Source/Game/: Arkanoid.cpp  Arkanoid.h  Ball.cpp  Ball.h  Brick.cpp  Brick.h  BrickFactory.cpp  BrickFactory.h  ButtonState.cpp  ButtonState.h  CollisionObserver.cpp  CollisionObserver.h  HUD.cpp  HUD.h  Paddle.cpp  Paddle.h  TestScene.cpp  TestScene.h  light.cpp  light.h
Tools/: cmake_vs2015.bat  cmake_vs2017.bat
